--- a/responsive.css
+++ b/responsive.css
@@ -51,6 +51,7 @@
         max-width: 100%;
         text-align: center;
         margin-bottom: 60px;
+        margin-left: 0px;
     }
 
     .wrap ul li {
@@ -59,12 +60,12 @@
 
     /* logos */
     .wrap-2 {
-        display: block;
+        flex-direction: column;
     }
 
     .wrap-2 div img {
         max-width: 200px;
-        padding-bottom: 60px;
+        padding-bottom: 20px;
         margin: 0 auto;
 
 
@@ -72,8 +73,20 @@
 
     .wrap-2 div img:nth-child(1) {
         margin-top: 60px;
+    }
 
+    footer {
+        flex-direction: column;
+        align-items: center;
+    }
 
+    .logo-2 {
+        padding-bottom: 20px;
+    }
+
+    footer li a {
+        padding: 10px;
+        text-align: center;
     }
 
 }
