--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
 .secondary h1 {
     text-align: center;
     padding-top: 4em;
-    font-size: 36px;
+    font-size: 28px;
     color: #4D545C;
     padding-bottom: 20px;
 }
@@ -144,7 +144,7 @@ body {
 .third h1 {
     color: #4D5359;
     font-weight: 600;
-    font-size: 28px;
+    font-size: 24px;
 }
 
 .third ul li {
@@ -199,7 +199,7 @@ body {
     color: #4D5359;
     font-weight: 600;
     text-align: center;
-    padding-top: 4em;
+    padding-top: 3em;
     font-size: 28px;
 }
 
@@ -216,7 +216,7 @@ body {
 .wrap {
     display: flex;
     flex-direction: row;
-    align-content: flex-start;
+
 }
 
 .wrap ul {
@@ -243,7 +243,9 @@ body {
 
 .wrap ul h2 {
     color: #4D5359;
+    font-size: 24px;
     font-weight: 600;
+    text-align: inherit;
 }
 
 /* parte das logos */
@@ -251,17 +253,67 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 40px;
+    padding: 0 40px 80px 0;
 }
 
 .wrap-2 div img {
     display: block;
-    width: 100%;
-    padding-left: 40px;
-    flex: 1;
+    max-width: 100%;
+
 }
 
-.wrap-2 div img:nth-child(1) {
-    padding-left: 0px;
+.wrap-2 div {
+    padding-left: 30px;
+}
+
+.wrap-2 div:nth-child(1) {
     margin: 0px;
+}
+
+/* clipboard for mac and ios */
+.final h2 {
+    font-size: 28px;
+    text-align: center;
+    color: #4D5359;
+    margin-bottom: 20px;
+}
+
+.final p {
+    max-width: 700px;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    color: #A6ABAB;
+    line-height: 1.5em;
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+
+/* footer */
+
+footer {
+    background: #F5F6F8;
+    display: flex;
+    padding: 40px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 90px;
+    align-items: flex-start;
+
+}
+
+.logo-2 img {
+    max-width: 60px;
+}
+
+footer li a {
+    color: #4D5359;
+    text-decoration: none;
+    display: block;
+    line-height: 2em;
+}
+
+.social a {
+    margin: 20px 10px 0 0;
+    display: inline-block;
 }
